# bincode-typescript

./: .gitignore  Cargo.toml  README.md  package.json
src/: bin.rs  enums.rs  lib.rs  structs.rs  types.rs
templates/: enum.ts.j2  enum_complex.ts.j2  enum_unit.ts.j2  module.ts.j2  runtime.ts.j2  struct.ts.j2  tuple.ts.j2
tests/: build.rs  test_types.rs  test_types.ts  tests.rs
tests/integration/: build.rs  main.rs  round_trip.rs  test_types.rs  test_types.ts
