[package]
name = "bincode-typescript"
license = "MIT"
version = "0.1.0"
authors = ["Tim Fish <tim@timfish.uk>"]
edition = "2018"
repository = "https://github.com/timfish/bincode-typescript"
description = "Generates TypeScript serialisation and deserialisation code from Rust structs and enums"
readme = "README.md"

[lib]
name = "bincode_typescript"
path = "src/lib.rs"

[[bin]]
name = "bincode-typescript"
path = "src/bin.rs"


[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits", "visit"] }
askama = "0.8"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
tempfile = "3"