[package]
authors = ["Tim Fish <tim@timfish.uk>"]
description = "Generates TypeScript serialisation and deserialisation code from Rust structs and enums"
edition = "2018"
license = "MIT"
name = "bincode-typescript"
readme = "README.md"
repository = "https://github.com/timfish/bincode-typescript"
version = "0.1.0"

[lib]
name = "bincode_typescript"
path = "src/lib.rs"

[dependencies]
askama = "0.8"
serde = "1.0"
serde-reflection = "0.3"

[dev-dependencies]
bincode = "1.3"
serde = {version = "1", features = ["derive"]}
tempfile = "3"
